--- a/Client/src/app/home-page/home-page.component.html
+++ b/Client/src/app/home-page/home-page.component.html
@@ -1,5 +1,12 @@
 <!-- <app-nav-bar></app-nav-bar> -->
 
-<div class="home" style="margin-top: 150px;">
+<div class="home">
     <p>home-page works!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi illo id cumque eligendi iste provident reiciendis nostrum praesentium asperiores ducimus tenetur molestiae, eaque laboriosam. Doloribus excepturi commodi ut fuga odit?</p>
 </div>
