--- a/Client/src/app/sections/blood-test/blood-test-details/blood-test-details.component.html
+++ b/Client/src/app/sections/blood-test/blood-test-details/blood-test-details.component.html
@@ -1,16 +1,19 @@
 <div class="content">
-  <div class="bloodTests">
-    <div class="action">
-      <div class="back">
-        <i routerLink="/patients/{{patientId}}/bloodTests" class="bi bi-arrow-left"></i>
-      </div>
-      <div class="options">
-        <button class="delete">Delete</button>
-        <button class="update">Update</button>
-      </div>
+
+  <div class="action">
+    <div class="back">
+      <i routerLink="/patients/{{patientId}}/bloodTests" class="bi bi-arrow-left"></i>
     </div>
-    <div *ngIf="bloodTest">
-      <h2>Blood Test Details</h2>
+    <div class="options">
+      <button class="delete">Delete</button>
+      <button class="update">Update</button>
+    </div>
+  </div>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Blood Tests Details</mat-card-title>
+    </mat-card-header>
+    <mat-card-content *ngIf="bloodTest">
       <p><strong>Patient Name:</strong> {{ patientName }}</p>
       <p><strong>Fecha:</strong> {{ bloodTest.date | date }}</p>
       <p><strong>Hemoglobin:</strong> {{bloodTest.hemoglobin}}</p>
@@ -20,6 +23,7 @@
       <p><strong>Cholesterol HDL:</strong> {{bloodTest.cholesterolHDL}}</p>
       <p><strong>Cholesterol LDL:</strong> {{bloodTest.cholesterolLDL}}</p>
       <p><strong>Triglycerides:</strong> {{bloodTest.triglycerides}}</p>
-    </div>
-  </div>
+      <mat-divider></mat-divider>
+    </mat-card-content>
+  </mat-card>
 </div>
