--- a/Client/src/app/sections/electrocardiogram/electrocardiogram.component.html
+++ b/Client/src/app/sections/electrocardiogram/electrocardiogram.component.html
@@ -1,33 +1,38 @@
 <div class="content">
-    <div class="electrocardiograms">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-        <h2>Electrocardiograms of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Heart Rhythm</th>
-                        <th>Intervals Segments</th>
-                        <th>Characteristic Waves</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let electrocardiogram of electrocardiogram"
-                    [routerLink]="['/patients', patientId, 'electrocardiograms', electrocardiogram.id]"
-                    >
-                        <td>{{electrocardiogram.date | date}}</td>
-                        <td>{{electrocardiogram.heartRhythm}}</td>
-                        <td>{{electrocardiogram.intervalsSegments}}</td>
-                        <td>{{electrocardiogram.characteristicWaves}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Electrocardiograms</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Heart Rhythm</th>
+                            <th>Intervals Segments</th>
+                            <th>Characteristic Waves</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let electrocardiogram of electrocardiogram"
+                            [routerLink]="['/patients', patientId, 'electrocardiograms', electrocardiogram.id]">
+                            <td>{{electrocardiogram.date | date}}</td>
+                            <td>{{electrocardiogram.heartRhythm}}</td>
+                            <td>{{electrocardiogram.intervalsSegments}}</td>
+                            <td>{{electrocardiogram.characteristicWaves}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
