--- a/Client/src/app/sections/physical-examination/physical-examination-details/physical-examination-details.component.scss
+++ b/Client/src/app/sections/physical-examination/physical-examination-details/physical-examination-details.component.scss
@@ -1,62 +1,58 @@
 .content {
     padding: 25px;
 
-    .physical-examination {
-        .action {
-            margin-top: 15px;
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+    .action {
+        margin-top: 15px;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-            .options {
-                button {
-                    margin-right: 10px;
-                    border: none;
-                    color: #fff;
-                    border-radius: 8px;
-                    padding: 7px 12px;
+        .options {
+            button {
+                margin-right: 10px;
+                border: none;
+                color: #fff;
+                border-radius: 8px;
+                padding: 7px 12px;
 
-                }
+            }
 
-                .delete {
-                    background-color: #E40B0B;
-                    transition: 0.5s;
+            .delete {
+                background-color: #E40B0B;
+                transition: 0.5s;
 
-                    &:hover {
-                        background-color: #c20909;
-                    }
-                }
-
-                .update {
-                    background-color: #0be448;
-                    transition: 0.5s;
-
-                    &:hover {
-                        background-color: #0bc43f;
-                    }
+                &:hover {
+                    background-color: #c20909;
                 }
             }
 
-            .back {
-                i {
-                    font-size: 35px;
-                    color: #303D50;
-                    cursor: pointer;
-                    transition: 0.5s;
+            .update {
+                background-color: #0be448;
+                transition: 0.5s;
 
-                    &:hover {
-                        color: #6985af;
-                        padding: 5px;
-                    }
+                &:hover {
+                    background-color: #0bc43f;
                 }
             }
         }
 
-        h2 {
-            margin-bottom: 25px;
-            font-weight: 500;
-            font-family: 'montserrat', sans-serif;
+        .back {
+            i {
+                font-size: 30px;
+                color: #303D50;
+                cursor: pointer;
+                transition: 0.5s;
+
+                &:hover {
+                    color: #6985af;
+                    padding: 5px;
+                }
+            }
         }
+    }
+
+    mat-card-content {
+        margin-top: 10px;
     }
 }
