--- a/Client/src/app/sections/appointment/appointment.component.html
+++ b/Client/src/app/sections/appointment/appointment.component.html
@@ -1,29 +1,33 @@
 <div class="content">
-  <div class="appointments">
-    <div class="action">
-      <div class="back">
-        <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-      </div>
+  <div class="action">
+    <div class="back">
+      <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
     </div>
-    <h2>Appointments of {{patientName}}</h2>
-
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let appointment of appointments"
-          [routerLink]="['/patients', patientId, 'appointments', appointment.id]">
-          <td>{{ appointment.date | date }}</td>
-          <td>{{ appointment.time }}</td>
-          <td>{{ appointment.description }}</td>
-        </tr>
-      </tbody>
-    </table>
-
   </div>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-subtitle>Appointments</mat-card-subtitle>
+      <mat-card-title>{{patientName}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let appointment of appointments"
+            [routerLink]="['/patients', patientId, 'appointments', appointment.id]">
+            <td>{{ appointment.date | date }}</td>
+            <td>{{ appointment.time }}</td>
+            <td>{{ appointment.description }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <mat-divider></mat-divider>
+    </mat-card-content>
+  </mat-card>
 </div>
