--- a/Client/src/app/sections/blood-test/blood-test.component.html
+++ b/Client/src/app/sections/blood-test/blood-test.component.html
@@ -1,34 +1,39 @@
 <div class="content">
-    <div class="bloodTests">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-        <h2>Blood Tests of {{patientName}}</h2>
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Hemoglobin</th>
-                        <th>Hematocrit</th>
-                        <th>White Blood Cell</th>
-                        <th>Platelets</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let bloodTest of bloodTest"
-                    [routerLink]="['/patients', patientId, 'bloodTests', bloodTest.id]"
-                    >
-                        <td>{{ bloodTest.date | date }}</td>
-                        <td>{{ bloodTest.hemoglobin }}</td>
-                        <td>{{ bloodTest.hematocrit }}</td>
-                        <td>{{ bloodTest.whiteBloodCell }}</td>
-                        <td>{{ bloodTest.platelets }}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Blood Tests</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Hemoglobin</th>
+                            <th>Hematocrit</th>
+                            <th>White Blood Cell</th>
+                            <th>Platelets</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let bloodTest of bloodTest"
+                            [routerLink]="['/patients', patientId, 'bloodTests', bloodTest.id]">
+                            <td>{{ bloodTest.date | date }}</td>
+                            <td>{{ bloodTest.hemoglobin }}</td>
+                            <td>{{ bloodTest.hematocrit }}</td>
+                            <td>{{ bloodTest.whiteBloodCell }}</td>
+                            <td>{{ bloodTest.platelets }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
