--- a/Client/src/app/sections/cardiac-cath-study/cardiac-cath-study.component.html
+++ b/Client/src/app/sections/cardiac-cath-study/cardiac-cath-study.component.html
@@ -1,33 +1,37 @@
 <div class="content">
-    <div class="cardiacCathStudies">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
-        <h2>Cardiac Catheterization Studies of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Number Location Main Coronary</th>
-                        <th>Blockage Each Coronary Artery</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let cardiacCathStudy of cardiacCathStudy"
-                    [routerLink]="['/patients', patientId, 'cardiacCathStudies', cardiacCathStudy.id]">
-                        <td>{{cardiacCathStudy.date | date}}</td>
-                        <td>{{cardiacCathStudy.time}}</td>
-                        <td>{{cardiacCathStudy.numLocationMainCoronary}}</td>
-                        <td>{{cardiacCathStudy.blockageEachCoronaryArtery}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
     </div>
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Cardiac Catheterization Studies</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Number Location Main Coronary</th>
+                            <th>Blockage Each Coronary Artery</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let cardiacCathStudy of cardiacCathStudy"
+                            [routerLink]="['/patients', patientId, 'cardiacCathStudies', cardiacCathStudy.id]">
+                            <td>{{cardiacCathStudy.date | date}}</td>
+                            <td>{{cardiacCathStudy.time}}</td>
+                            <td>{{cardiacCathStudy.numLocationMainCoronary}}</td>
+                            <td>{{cardiacCathStudy.blockageEachCoronaryArtery}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
