--- a/Client/src/app/sections/diagnostics/diagnostic.component.html
+++ b/Client/src/app/sections/diagnostics/diagnostic.component.html
@@ -1,32 +1,37 @@
 <div class="content">
-    <div class="diagnostics">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-        <h2>Blood Tests of {{patientName}}</h2>
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Condition Name</th>
-                        <th>Description</th>
-                        <th>Classification Condition</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let diagnostic of diagnostic"
-                    [routerLink]="['/patients', patientId, 'diagnostics', diagnostic.id]"
-                    >
-                        <td>{{ diagnostic.date | date }}</td>
-                        <td>{{ diagnostic.conditionName }}</td>
-                        <td>{{ diagnostic.description }}</td>
-                        <td>{{ diagnostic.classificationCondition }}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Diagnostics</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Condition Name</th>
+                            <th>Description</th>
+                            <th>Classification Condition</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let diagnostic of diagnostic"
+                            [routerLink]="['/patients', patientId, 'diagnostics', diagnostic.id]">
+                            <td>{{ diagnostic.date | date }}</td>
+                            <td>{{ diagnostic.conditionName }}</td>
+                            <td>{{ diagnostic.description }}</td>
+                            <td>{{ diagnostic.classificationCondition }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
