--- a/Client/src/app/sections/echocardiogram/echocardiogram.component.html
+++ b/Client/src/app/sections/echocardiogram/echocardiogram.component.html
@@ -1,35 +1,40 @@
 <div class="content">
-    <div class="echocardiograms">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
-        <h2>Echocardiograms of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Cardiac Dimensions</th>
-                        <th>Ejection Fraction</th>
-                        <th>Valve Function</th>
-                        <th>Velocities Blood Flows</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let echocardiogram of echocardiogram"
-                        [routerLink]="['/patients', patientId, 'echocardiograms', echocardiogram.id]">
-                        <td>{{echocardiogram.date | date}}</td>
-                        <td>{{echocardiogram.cardiacDimensions}}</td>
-                        <td>{{echocardiogram.ejectionFraction}}</td>
-                        <td>{{echocardiogram.valveFunction}}</td>
-                        <td>{{echocardiogram.velocitiesBloodFlows}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Echocardiograms</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Cardiac Dimensions</th>
+                            <th>Ejection Fraction</th>
+                            <th>Valve Function</th>
+                            <th>Velocities Blood Flows</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let echocardiogram of echocardiogram"
+                            [routerLink]="['/patients', patientId, 'echocardiograms', echocardiogram.id]">
+                            <td>{{echocardiogram.date | date}}</td>
+                            <td>{{echocardiogram.cardiacDimensions}}</td>
+                            <td>{{echocardiogram.ejectionFraction}}</td>
+                            <td>{{echocardiogram.valveFunction}}</td>
+                            <td>{{echocardiogram.velocitiesBloodFlows}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
