--- a/Client/src/app/sections/holter-study/holter-study.component.html
+++ b/Client/src/app/sections/holter-study/holter-study.component.html
@@ -1,35 +1,40 @@
 <div class="content">
-    <div class="holter-studies">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-        <h2>Holter studies of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Study Diration</th>
-                        <th>Average Heart Rate</th>
-                        <th>Maximum Heart Rate</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let holterStudy of holterStudy"
-                    [routerLink]="['/patients', patientId, 'holterstudies', holterStudy.id]"
-                    >
-                        <td>{{holterStudy.date | date}}</td>
-                        <td>{{holterStudy.time}}</td>
-                        <td>{{holterStudy.studyDuration}}</td>
-                        <td>{{holterStudy.averageHeartRate}}</td>
-                        <td>{{holterStudy.maximumHeartRate}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Holter studies</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Study Diration</th>
+                            <th>Average Heart Rate</th>
+                            <th>Maximum Heart Rate</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let holterStudy of holterStudy"
+                            [routerLink]="['/patients', patientId, 'holterstudies', holterStudy.id]">
+                            <td>{{holterStudy.date | date}}</td>
+                            <td>{{holterStudy.time}}</td>
+                            <td>{{holterStudy.studyDuration}}</td>
+                            <td>{{holterStudy.averageHeartRate}}</td>
+                            <td>{{holterStudy.maximumHeartRate}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
