--- a/Client/src/app/sections/physical-examination/physical-examination.component.html
+++ b/Client/src/app/sections/physical-examination/physical-examination.component.html
@@ -1,36 +1,39 @@
 <div class="content">
-    <div class="physical-examination">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-
-        <h2>Physical examinations of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Duration</th>
-                        <th>Max Heart Rate</th>
-                        <th>Peak Pressure</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let physicalExamination of physicalExamination"
-                    [routerLink]="['/patients', patientId, 'physicalexaminations', physicalExamination.id]"
-                    >
-                        <td>{{physicalExamination.date | date}}</td>
-                        <td>{{physicalExamination.time}}</td>
-                        <td>{{physicalExamination.duration}}</td>
-                        <td>{{physicalExamination.maxHeartRate}}</td>
-                        <td>{{physicalExamination.peakPressure}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Physical examinations</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Duration</th>
+                            <th>Max Heart Rate</th>
+                            <th>Peak Pressure</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let physicalExamination of physicalExamination"
+                            [routerLink]="['/patients', patientId, 'physicalexaminations', physicalExamination.id]">
+                            <td>{{physicalExamination.date | date}}</td>
+                            <td>{{physicalExamination.time}}</td>
+                            <td>{{physicalExamination.duration}}</td>
+                            <td>{{physicalExamination.maxHeartRate}}</td>
+                            <td>{{physicalExamination.peakPressure}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
