--- a/Client/src/app/sections/stress-test/stress-test-details/stress-test-details.component.html
+++ b/Client/src/app/sections/stress-test/stress-test-details/stress-test-details.component.html
@@ -1,28 +1,38 @@
 <div class="content">
-    <div class="stress-test">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}/stresstests" class="bi bi-arrow-left"></i>
-            </div>
-            <div class="options">
-                <button class="delete">Delete</button>
-                <button class="update">Update</button>
-            </div>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}/stresstests" class="bi bi-arrow-left"></i>
         </div>
-
-        <div *ngIf="stressTest">
-            <h2>Stress test details</h2>
-            <p><strong>Patient Name: </strong>{{patientName}}</p>
-            <p><strong>Date: </strong>{{stressTest.date}}</p>
-            <p><strong>Time: </strong>{{stressTest.time}}</p>
-            <p><strong>Duration: </strong>{{stressTest.duration}}</p>
-            <p><strong>Max Heart Rate: </strong>{{stressTest.maxHeartRate}}</p>
-            <p><strong>Peak Pressure: </strong>{{stressTest.peakPressure}}</p>
-            <p><strong>Exercise Induced Symptoms: </strong>{{stressTest.exerciseInducedSymptoms}}</p>
-            <p><strong>Abnormal Ecg Findings: </strong>{{stressTest.abnormalEcgFindings}}</p>
-            <!-- <p><strong>ImageEco</strong>{{stressTest.imageEco}}</p>
-            <p><strong>Image Stress</strong>{{stressTest.imageStress}}</p> -->
-            <p><strong>Conclusion: </strong>{{stressTest.conclusion}}</p>
+        <div class="options">
+            <button class="delete">Delete</button>
+            <button class="update">Update</button>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-title>Stress Test Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content *ngIf="stressTest">
+            <mat-card-subtitle>Patient Name</mat-card-subtitle>
+            <p>{{ patientName }}</p>
+            <mat-card-subtitle>Date</mat-card-subtitle>
+            <p>{{stressTest.date | date}}</p>
+            <mat-card-subtitle>Time</mat-card-subtitle>
+            <p>{{stressTest.time | date}}</p>
+            <mat-card-subtitle>Duration</mat-card-subtitle>
+            <p>{{stressTest.duration}}</p>
+            <mat-card-subtitle>Max Heart Rate</mat-card-subtitle>
+            <p>{{stressTest.maxHeartRate}}</p>
+            <mat-card-subtitle>Peak Pressure</mat-card-subtitle>
+            <p>{{stressTest.peakPressure}}</p>
+            <mat-card-subtitle>Exercise Induced Symptoms</mat-card-subtitle>
+            <p>{{stressTest.exerciseInducedSymptoms}}</p>
+            <mat-card-subtitle>Abnormal Ecg Findings</mat-card-subtitle>
+            <p>{{stressTest.abnormalEcgFindings}}</p>
+            <mat-divider />
+            <mat-card-subtitle style="margin-top: 10px;">Conclusions</mat-card-subtitle>
+            <p>{{stressTest.conclusion}}</p>
+        </mat-card-content>
+    </mat-card>
 </div>
