--- a/Client/src/app/sections/stress-test/stress-test.component.html
+++ b/Client/src/app/sections/stress-test/stress-test.component.html
@@ -1,36 +1,40 @@
 <div class="content">
-    <div class="stress-tests">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-
-        <h2>Stress test of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Duration</th>
-                        <th>Max Heart Rate</th>
-                        <th>Peak Pressure</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let stressTest of stressTest"
-                    [routerLink]="['/patients', patientId, 'stresstests', stressTest.id]"
-                    >
-                        <td>{{stressTest.date}}</td>
-                        <td>{{stressTest.time}}</td>
-                        <td>{{stressTest.duration}}</td>
-                        <td>{{stressTest.maxHeartRate}}</td>
-                        <td>{{stressTest.peakPressure}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Stress Tests</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Duration</th>
+                            <th>Max Heart Rate</th>
+                            <th>Peak Pressure</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let stressTest of stressTest"
+                            [routerLink]="['/patients', patientId, 'stresstests', stressTest.id]">
+                            <td>{{stressTest.date}}</td>
+                            <td>{{stressTest.time}}</td>
+                            <td>{{stressTest.duration}}</td>
+                            <td>{{stressTest.maxHeartRate}}</td>
+                            <td>{{stressTest.peakPressure}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
