--- a/Client/src/app/sections/treatment/treatment-details/treatment-details.component.html
+++ b/Client/src/app/sections/treatment/treatment-details/treatment-details.component.html
@@ -1,25 +1,35 @@
 <div class="content">
-    <div class="treatment">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}/treatments" class="bi bi-arrow-left"></i>
-            </div>
-            <div class="options">
-                <button class="delete">Delete</button>
-                <button class="update">Update</button>
-            </div>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}/treatments" class="bi bi-arrow-left"></i>
         </div>
-
-        <div *ngIf="treatment">
-            <h2>Treatment details</h2>
-            <p><strong>Patient Name: </strong> {{patientName}}</p>
-            <p><strong>Date: </strong>{{treatment.date | date}}</p>
-            <p><strong>Medication: </strong>{{treatment.medication}}</p>
-            <p><strong>Dosage: </strong>{{treatment.dosage}}</p>
-            <p><strong>Instructions: </strong>{{treatment.instructions}}</p>
-            <p><strong>Other Treatments: </strong>{{treatment.otherTreatments}}</p>
-            <p><strong>Side Effects: </strong>{{treatment.sideEffects}}</p>
-            <p><strong>Treatment Monitoring: </strong>{{treatment.treatmentMonitoring}}</p>
+        <div class="options">
+            <button class="delete">Delete</button>
+            <button class="update">Update</button>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-title>Treatment Details</mat-card-title>
+        </mat-card-header>
+        <mat-card-content *ngIf="treatment">
+            <mat-card-subtitle>Patient Name</mat-card-subtitle>
+            <p>{{ patientName }}</p>
+            <mat-card-subtitle>Date</mat-card-subtitle>
+            <p>{{treatment.date | date}}</p>
+            <mat-card-subtitle>Medication</mat-card-subtitle>
+            <p>{{treatment.medication}}</p>
+            <mat-card-subtitle>Dosage</mat-card-subtitle>
+            <p>{{treatment.dosage}}</p>
+            <mat-card-subtitle>Instructions</mat-card-subtitle>
+            <p>{{treatment.instructions}}</p>
+            <mat-card-subtitle>Other Treatments</mat-card-subtitle>
+            <p>{{treatment.otherTreatments}}</p>
+            <mat-card-subtitle>Side Effects</mat-card-subtitle>
+            <p>{{treatment.sideEffects}}</p>
+            <mat-card-subtitle>Treatment Monitoring</mat-card-subtitle>
+            <p>{{treatment.treatmentMonitoring}}</p>
+        </mat-card-content>
+    </mat-card>
 </div>
