--- a/Client/src/app/sections/treatment/treatment.component.html
+++ b/Client/src/app/sections/treatment/treatment.component.html
@@ -1,36 +1,40 @@
 <div class="content">
-    <div class="treatments">
-        <div class="action">
-            <div class="back">
-                <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
-            </div>
-        </div>
-
-        <h2>Treatments of {{patientName}}</h2>
-
-        <div class="table-wrapper">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Medication</th>
-                        <th>Dosage</th>
-                        <th>Instructions</th>
-                        <th>Other Treatments</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let treatment of treatment"
-                    [routerLink]="['/patients', patientId, 'treatments', treatment.id]"
-                    >
-                        <td>{{treatment.date | date}}</td>
-                        <td>{{treatment.medication}}</td>
-                        <td>{{treatment.dosage}}</td>
-                        <td>{{treatment.instructions}}</td>
-                        <td>{{treatment.otherTreatments}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div class="action">
+        <div class="back">
+            <i routerLink="/patients/{{patientId}}" class="bi bi-arrow-left"></i>
         </div>
     </div>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-subtitle>Treatments</mat-card-subtitle>
+            <mat-card-title>{{patientName}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="table-wrapper">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Medication</th>
+                            <th>Dosage</th>
+                            <th>Instructions</th>
+                            <th>Other Treatments</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let treatment of treatment"
+                            [routerLink]="['/patients', patientId, 'treatments', treatment.id]">
+                            <td>{{treatment.date | date}}</td>
+                            <td>{{treatment.medication}}</td>
+                            <td>{{treatment.dosage}}</td>
+                            <td>{{treatment.instructions}}</td>
+                            <td>{{treatment.otherTreatments}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
 </div>
